# Kaggle-vesuvius-9th

./: Inference.ipynb  README.md  convert_to_nnunet_raw.py  nnUNetResEncUNetMPlans.json  train_script.sh
villa/volume-cartographer/: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  docker_s3_entrypoint.sh  docker_s3_readme.txt  ubuntu-24.04-noble.Dockerfile
villa/volume-cartographer/apps/: CMakeLists.txt
villa/volume-cartographer/apps/VC3D/: CMakeLists.txt  CPointCollectionWidget.cpp  CPointCollectionWidget.hpp  CSurfaceCollection.cpp  CSurfaceCollection.hpp  CVolumeViewer.cpp  CVolumeViewer.hpp  CVolumeViewerIntersections.cpp  CVolumeViewerOverlay.cpp  CVolumeViewerRender.cpp  CVolumeViewerView.cpp  CVolumeViewerView.hpp  CWindow.cpp  CWindow.hpp  CWindowContextMenu.cpp  CommandLineToolRunner.cpp  CommandLineToolRunner.hpp  ConsoleOutputWidget.cpp  ConsoleOutputWidget.hpp  DrawingWidget.cpp  DrawingWidget.hpp  MenuActionController.cpp  MenuActionController.hpp  SeedingWidget.cpp  SeedingWidget.hpp  SegmentRenderThread.cpp  SegmentRenderThread.hpp  SettingsDialog.cpp  SettingsDialog.hpp  SurfacePanelController.cpp  SurfacePanelController.hpp  SurfaceTreeWidget.cpp  ToolDialogs.cpp  ToolDialogs.hpp  VCAppMain.cpp  VCMain.ui  VCSettings.hpp  VCSettings.ui  ViewerManager.cpp  ViewerManager.hpp  (+5 more)
villa/volume-cartographer/apps/VC3D/elements/: COutlinedTextItem.cpp  COutlinedTextItem.hpp  CollapsibleSettingsGroup.cpp  CollapsibleSettingsGroup.hpp  DropdownChecklistButton.cpp  DropdownChecklistButton.hpp  ProgressUtil.cpp  ProgressUtil.hpp  RangeSlider.cpp  RangeSlider.hpp
villa/volume-cartographer/apps/VC3D/overlays/: BBoxOverlayController.cpp  BBoxOverlayController.hpp  PathsOverlayController.cpp  PathsOverlayController.hpp  PlaneSlicingOverlayController.cpp  PlaneSlicingOverlayController.hpp  PointsOverlayController.cpp  PointsOverlayController.hpp  RawPointsOverlayController.cpp  RawPointsOverlayController.hpp  SegmentationOverlayController.cpp  SegmentationOverlayController.hpp  VectorOverlayController.cpp  VectorOverlayController.hpp  ViewerOverlayControllerBase.cpp  ViewerOverlayControllerBase.hpp  VolumeOverlayController.cpp  VolumeOverlayController.hpp
villa/volume-cartographer/apps/VC3D/segmentation/: ApprovalMaskBrushTool.cpp  ApprovalMaskBrushTool.hpp  SegmentationBrushTool.cpp  SegmentationBrushTool.hpp  SegmentationCorrections.cpp  SegmentationCorrections.hpp  SegmentationEditManager.cpp  SegmentationEditManager.hpp  SegmentationGrower.cpp  SegmentationGrower.hpp  SegmentationGrowth.cpp  SegmentationGrowth.hpp  SegmentationLineTool.cpp  SegmentationLineTool.hpp  SegmentationModule.cpp  SegmentationModule.hpp  SegmentationModule_Falloff.cpp  SegmentationModule_Input.cpp  SegmentationModule_Session.cpp  SegmentationPushPullConfig.hpp  SegmentationPushPullTool.cpp  SegmentationPushPullTool.hpp  SegmentationTool.hpp  SegmentationUndoHistory.hpp  SegmentationWidget.cpp  SegmentationWidget.hpp
villa/volume-cartographer/apps/diffusion/: common.hpp  continous.cpp  continous.hpp  continuous3d.cpp  continuous3d.hpp  discrete.cpp  discrete.hpp  spiral.cpp  spiral.hpp  spiral2.cpp  spiral2.hpp  spiral2cont.cpp  spiral2cont.hpp  spiral_ceres.cpp  spiral_ceres.hpp  spiral_common.cpp  spiral_common.hpp  support.hpp  vc_diffuse_winding.cpp
villa/volume-cartographer/apps/src/: ObjAlphaCompRefinement.cpp  ZarrExtract.cpp  vc_calc_surface_metrics.cpp  vc_ced2d.cpp  vc_create_segment_mask.cpp  vc_fill_quadmesh.cpp  vc_flatten.cpp  vc_gen_normalgrids.cpp  vc_grow_seg_from_seed.cpp  vc_grow_seg_from_segments.cpp  vc_obj2tifxyz.cpp  vc_obj2tifxyz_legacy.cpp  vc_render_video.cpp  vc_rgb2tifxyz.cpp  vc_seg_add_overlap.cpp  vc_surface_diff.cpp  vc_telea_inpaint.cpp  vc_thinning.cpp  vc_tiffxyz_upscale_grounding.cpp  vc_tifxyz.cpp  vc_tifxyz2obj.cpp  vc_tifxyz2rgb.cpp  vc_tifxyz_gengt.cpp  vc_tifxyz_inp_mask.cpp  vc_tifxyz_winding.cpp  vc_transform_geom.cpp  vc_visualize.cpp
villa/volume-cartographer/cmake/: FindPaStiX.cmake  Packing.cmake  VCConfig.cmake.in  VCFindDependencies.cmake  VCInstall.cmake  VCWarnings.cmake
villa/volume-cartographer/core/: CMakeLists.txt
villa/volume-cartographer/core/include/vc/core/: Version.hpp
villa/volume-cartographer/core/include/vc/core/types/: Volume.hpp  (+3 more)
villa/volume-cartographer/core/include/vc/tracer/: NeuralTracerConnection.h  Tracer.hpp
villa/volume-cartographer/core/include/vc/ui/: UDataManipulateUtils.hpp  VCCollection.hpp  surface_metrics.hpp
villa/volume-cartographer/core/openmp_stub/: omp.h
villa/volume-cartographer/core/src/: GridStore.cpp  GrowPatch.cpp  GrowSurface.cpp  Logging.cpp  NeuralTracerConnection.cpp  NormalGridVolume.cpp  Render.cpp  Segmentation.cpp  Thinning.cpp  UDataManipulateUtils.cpp  Umbilicus.cpp  VCCollection.cpp  Version.cpp.in  Volume.cpp  VolumePkg.cpp  normalgridtools.cpp  surface_metrics.cpp
villa/volume-cartographer/docs/: extending_and_modifying_segmentations.md  grow_patch_point_corrections.md  overlay_system.md  seg-editing-technical-doc.md  surface_metrics.md  tracing.md
villa/volume-cartographer/docs/api/: SpatialIndex.md  Surface.md  Volume.md  io.md
villa/volume-cartographer/libs/: config.in
villa/volume-cartographer/libs/OpenABF/: CMakeLists.txt
villa/volume-cartographer/libs/flatboi/: CMakeLists.txt  flatboi.cpp
villa/volume-cartographer/libs/libigl_changes/: CMakeLists.txt
villa/volume-cartographer/libs/libigl_changes/include/igl/: slim.cpp
villa/volume-cartographer/misc/: CMakeLists.txt  sanitizer_config.c
villa/volume-cartographer/scripts/: batch_objrefine.sh  batch_seed_inpaint.sh  batch_tifxyz2obj.sh  build_dependencies.sh  flatboi.py  gen_surface_masks.py  get_fiber_directions.py  move_backups.py  overlapping_to_json.py  setup_sudo.sh  setup_user.sh  vc_sync.py
villa/volume-cartographer/scripts/evaluation/: README.md  eval_surface_tracer.py  example_config.json  get_seeds_from_paths.py
villa/volume-cartographer/scripts/mesh_refine_params/: obj_refine_params_s1.json  obj_refine_params_s4.json  obj_refine_params_s5.json
(+217 files in other folders)
